add_subdirectory(core)

add_files(
    network.cpp
    network.h
    network_admin.cpp
    network_admin.h
    network_base.h
    network_chat_gui.cpp
    network_client.cpp
    network_client.h
    network_command.cpp
    network_content.cpp
    network_content.h
    network_content_gui.cpp
    network_content_gui.h
    network_func.h
    network_gamelist.cpp
    network_gamelist.h
    network_gui.cpp
    network_gui.h
    network_internal.h
    network_server.cpp
    network_server.h
    network_type.h
    network_udp.cpp
    network_udp.h
)
