add_subdirectory(api)

if(OPTION_TOOLS_ONLY)
    return()
endif()

add_files(
    script_cmd.h
    script_config.cpp
    script_config.h
    script_fatalerror.h
    script_gui.h
    script_gui.cpp
    script_info.cpp
    script_info.h
    script_info_dummy.cpp
    script_instance.cpp
    script_instance.h
    script_scanner.cpp
    script_scanner.h
    script_storage.h
    script_suspend.h
    squirrel.cpp
    squirrel.h
    squirrel_class.h
    squirrel_helper.h
    squirrel_helper_type.h
    squirrel_std.cpp
    squirrel_std.h
)
